fix: calendar list align

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -799,11 +799,6 @@ div.time-style {
   background-color: rgba(255, 255, 255, 0.25) !important;
 }
 
-.td-item {
-  .pt-0 {
-    padding-top: 0rem !important;
-  }
-}
 .weekly-schedule-subtitle {
   margin-bottom: 30px;
 }
